Finished corrections for the rejected tweeter project (1-char-counter.js added classes 2-counter is working now, change out event type with input 3-added word-wrap break-word

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -63,6 +63,7 @@ form span {
     font-size: 1 rem;
     margin: 10px auto 20px auto;
     width: 90%;
+    word-wrap: break-word;
 
 }
 .tweet_article:hover {
@@ -78,4 +79,11 @@ form span {
 
 .new-tweet {
     display: none;
+}
+
+.red {
+    color: red;
+}
+.black {
+    color: black;
 }
